--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 	display: block;
 } */
 
-ul {
+/* ul {
 	padding: 30px;
 	border: 1px solid red;
 }
@@ -28,4 +28,10 @@ li {
 	list-style-type: none;
 	margin-bottom: 20px;
 	border: 1px dashed black;
+} */
+
+td {
+	width: 50px;
+	height: 50px;
+	border: 1px solid black;
 }
